--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -3,5 +3,11 @@
     "tabTitleBoxes": "Kasser",
     "tabTitleMealboxes": "Måltider",
     "tabTitleExtra": "Ekstra",
-    "tabTitleAccount": "Min side"
+    "tabTitleAccount": "Min side",
+    "tabTitleDetails": "Detaljer",
+    "loadingText": "Henter...",
+    "pageDetails": {
+        "headerDescription": "Beskrivelse",
+        "headerContent": "Indhold"
+    }
 }
